fix: CLIN-1582 fix alignement icon action

--- a/src/style/themes/clin/antd/buttons.less
+++ b/src/style/themes/clin/antd/buttons.less
@@ -30,6 +30,10 @@
     }
   }
 
+  &-icon-only&-sm >*{
+    font-size: 16px ;
+  }
+
   :not(&-lg) {
     &.iconRight .anticon {
       height: 14px;
